Proyecto2/k8s/go-deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-deployment1
  namespace: proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-deployment1
  template:
    metadata:
      labels:
        app: go-deployment1
    spec:
      containers:
      - name: go-deployment1
        image: 34.135.173.147.nip.io/proyecto2/go-deployment1:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
