Proyecto2/k8s/go-deployment1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-deployment1-service
  namespace: proyecto2
spec:
  selector:
    app: go-deployment1
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
